--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,19 @@
 
 body {
 	color: red;
+	width: 560px;
+	margin: 0 auto;
+}
+
+.header {
+	text-align: center;
+	
+	
+	clear: both;
+	background-color: blue;
+}
+
+.content_container {
+	clear: both;
+	background-color: blue;
 }
