--- a/css/style.css
+++ b/css/style.css
@@ -89,13 +89,6 @@ a:active {
 	height: 100px;
 }
 
-.help {
-	background-color: black;
-	opacity: 0.5;
-	width: 400px;
-	height: 400px;
-}
-
 /* Main Menu */
 .mainmenu ul
 {
@@ -234,6 +227,45 @@ a:active {
 	padding-bottom: 8px;
 }
 
+.backdrop
+{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: .0;
+	z-index: 50;
+	display: none;
+}
+
+.box
+{
+	position: absolute;
+	top: 20%;
+	left: 30%;
+	width: 500px;
+	height: 300px;
+	display: block;
+	background: #ffffff;
+	z-index: 51;
+	padding: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-moz-box-shadow: 0px 0px 10px #444444;
+	-webkit-box-shadow: 0px 0px 10px #444444;
+	box-shadow: 0px 0px 10px #444444;
+	display: none;
+}
+
+.close
+{
+	float: right;
+	margin-right: 6px;
+	cursor: pointer;
+}
 
 
 
