--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ a:active {
 /* Header area */
 .header {
 	background-color: #F0F0F0;
+	box-shadow: inset 0 0 10px #000000;
 }
 #shoppingcart {
 	float: right;
@@ -101,6 +102,7 @@ a:active {
 	margin-bottom: 0;
 	text-align:center;
 	position: absolute;
+	box-shadow: inset 0 0 10px #000000;
 }
 
 .customer_content_container {
@@ -191,6 +193,12 @@ a:active {
 	text-align: center;
 }
 
+.textbox textarea
+{
+	height: 100px;
+	width: 300px;
+}
+
 
 
 .buttonlayout_more
@@ -228,18 +236,12 @@ a:active {
 
 }
 
-/*                                    */
-.home {
-	background-color: blue;
-	width: 100px;
-	height: 100px;
+.colorbox
+{
+	
 }
 
-.imprint {
-	background-color: green;
-	width: 100px;
-	height: 100px;
-}
+
 
 /* Main Menu */
 .mainmenu ul
@@ -265,7 +267,7 @@ a:active {
 	background: -ms-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* IE10+ */
 	background: linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7f7f7f', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
-
+	
 }
 
 .mainmenu li
