--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+/* --------------- General ------------------------------ */
 /*sets body 100% in firefox*/
 html, body {
 	min-height: 100%;
@@ -28,10 +30,25 @@ body
 	
 	background-repeat:no-repeat;
 	background-color: #F0F0F0;
-
 }
 
-/* Headers */
+.header {
+	background-color: #F0F0F0;
+	box-shadow: inset 0 0 10px #000000;
+}
+
+.content_container {
+	background-color: #F0F0F0;
+	width: 900px;
+	height: auto;
+	margin-bottom: 0;
+	text-align:center;
+	position: absolute;
+	box-shadow: inset 0 0 10px #000000;
+}
+
+
+/* --------------- Headers ------------------------------ */
 body h1{
 	 
 	 font-family: Arial, Helvetica, sans-serif;
@@ -43,8 +60,6 @@ body h1{
 	 text-align: left;
 	 text-transform: uppercase;
 	 color: #333;
-	 
-	
 }
 
 h2
@@ -76,11 +91,10 @@ a:active {
 	color:black; text-decoration:underline; 
 }
 
-/* Header area */
-.header {
-	background-color: #F0F0F0;
-	box-shadow: inset 0 0 10px #000000;
-}
+/* --------------- Header Area ------------------------------ */
+
+
+
 #shoppingcart {
 	float: right;
 	margin: 10px;
@@ -98,37 +112,28 @@ a:active {
 	font-weight:bold; color:black; text-decoration:underline; 
 }
 
-#logo {
-	width: 400px;
-	margin: 5px;
-}
 
-.content_container {
-	background-color: #F0F0F0;
-	width: 900px;
-	height: auto;
-	margin-bottom: 0;
-	text-align:center;
-	position: absolute;
-	box-shadow: inset 0 0 10px #000000;
-}
-
-
-/* Style of contents	*/
-
-/*Style of the tree products*/
+/* --------------- wrapper ------------------------ */
 .boxwrapper 
 {
 	margin: 40px auto;
 	width: 780px;
 }
 
+.colorboxwrapper
+{
+	margin: 40px auto;
+	width: 780px;
+}
+
+/* --------------- Box Layouts ------------------------ */
+
+
 .whitebox 
 {
 	float: left;
 	background-color: white;
 	border-radius: 10px;
-	text-align: center;
 	box-shadow: 1px 1px 2px black;
 	margin: 10px;
 }
@@ -163,13 +168,23 @@ a:active {
 	display: none;
 }
 
-.homebox
+fieldset
 {
-	max-width: 400px;
-	height: auto;
-	width: auto;
+	border: black solid 1px;
+	border-radius: 10px;
+	padding: 10px;
+	margin:10px;
 }
 
+legend
+{
+	font-weight:bold;
+	font-size: 1.2em;
+	text-align: left;
+}
+
+
+/* --------------- images ------------------------ */
 #littlelogo
 {
 	width: 120px;
@@ -179,28 +194,19 @@ a:active {
 #minilogo
 {
 	width:40px;
-	margin: 5px 20px;
+	margin: 5px;
 	float:left;
 	margin-bottom:5px;
 }
 
-.textbox
-{
-	clear: both;
-	border:#000000 1px solid;
-	margin: 10px 10px 10px 10px;
-	border-radius: 10px;
-	padding: 10px 30px;
-	text-align: center;
-}
-
-.textbox textarea
-{
-	height: 100px;
-	width: 300px;
+#logo {
+	width: 400px;
+	margin: 5px;
 }
 
 
+
+/* --------------- Button Layouts ------------------------ */
 
 .buttonlayout_more
 {
@@ -237,14 +243,8 @@ a:active {
 
 }
 
-.colorbox
-{
-	
-}
 
-
-
-/* Main Menu */
+/* --------------- Main Menu ------------------------------ */
 .mainmenu ul
 {
 	margin:0;
@@ -311,7 +311,7 @@ a:active {
 
 
 
-/* registration formular */
+/* --------------- Registration Formular ------------------------------ */
 .registrationform label{
 	margin-left: 10px;
 	width: 10em;
