--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html, body {
 	min-height: 100%;
 }
 
-
 body 
 {
 	color: #131313;
@@ -34,17 +33,71 @@ body
 
 .header {
 	background-color: #F0F0F0;
-	box-shadow: inset 0 0 10px #000000;
+	width: 900px;
+	height: 120px;
+	
+	-moz-box-shadow: inset 0 0 10px 0 #000;
+	-webkit-box-shadow: inset 0 0 10px 0 #000;
+	box-shadow: inset 0 0 10px 0 #000;
 }
 
 .content_container {
 	background-color: #F0F0F0;
 	width: 900px;
 	height: auto;
-	margin-bottom: 0;
 	text-align:center;
-	position: absolute;
-	box-shadow: inset 0 0 10px #000000;
+	position:relative;
+	float: left;
+	clear: both;
+	padding-bottom: 40px;
+	background-repeat:no-repeat;
+	
+	-moz-box-shadow: inset 0 0 10px 0 #000;
+	-webkit-box-shadow: inset 0 0 10px 0 #000;
+	box-shadow: inset 0 0 10px 0 #000;
+}
+
+.footer
+{
+	height: 60px;
+	width: 900px;
+	clear: both;
+	float:left;
+	position:relative;
+	top: 0px;
+	background-color:#131313;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+            
+}
+
+/* --------------- inset shadows ------------------------------ */
+.shadow_left
+{
+	-moz-box-shadow: inset 15px 0 10px -15px #000;
+	-webkit-box-shadow: inset 15px 0 10px -15px #000;
+	box-shadow: inset 15px 0 10px -15px #000;
+}
+
+.shadow_right
+{
+	-moz-box-shadow: inset -15px 0 10px -15px #000;
+	-webkit-box-shadow: inset -15px 0 10px -15px #000;
+	box-shadow: inset -15px 0 10px -15px #000;
+}
+
+.shadow_top
+{
+	-moz-box-shadow: inset 0 15px 10px -15px #000;
+	-webkit-box-shadow: inset 0 15px 10px -15px #000;
+	box-shadow: inset 0 15px 10px -15px #000;	
+}
+
+.shadow_bottom
+{
+	-moz-box-shadow: inset 0 -15px 10px -15px #000;
+	-webkit-box-shadow: inset 0 -15px 10px -15px #000;
+	box-shadow: inset 0 -15px 10px -15px #000;
 }
 
 
@@ -72,6 +125,13 @@ h3
 {
 	text-align: left;
 	color: #131313;
+}
+
+hr
+{
+ border: 0px; /* Für Firefox und Opera */
+ border-top: solid 1px #FF0000;
+ border-bottom: solid 1px #FFFFFF; /* Für I.Explorer (Seiten-Hintergrundfarbe!) */
 }
 
 /* Hyperlinks */
@@ -123,8 +183,9 @@ a:active {
 .colorboxwrapper
 {
 	margin: 40px auto;
-	width: 780px;
+	width: 450px;
 }
+
 
 /* --------------- Box Layouts ------------------------ */
 
@@ -174,6 +235,8 @@ fieldset
 	border-radius: 10px;
 	padding: 10px;
 	margin:10px;
+	height: auto;
+	width: auto;
 }
 
 legend
