--- a/css/style.css
+++ b/css/style.css
@@ -738,9 +738,7 @@ legend
 	margin-top: 5px;
 }
 
-#register{
-
-
+#link_register{
 	font-style: italic;
 	text-decoration: underline;
 	margin-left: 20px;
