Produkte verschwinden nicht mehr bei "mehr"

--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,12 @@ th
 	margin-right: 40px;
 }
 
+.productwrapper
+{
+	width: 780px;
+	clear:both;
+}
+
 
 /* --------------- Box Layouts ------------------------ */
 
