--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body
 	width: 900px;
 	margin: 0 auto;
 	font-family: Arial, Helvetica, sans-serif;
-
+z
 	/*gradient color for all browser*/
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#F0F0F0'); /* for IE */
 	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#F0F0F0)); /* for webkit browsers */
@@ -241,6 +241,12 @@ th
 .colorboxwrapper
 {
 	margin: 40px auto;
+	width: 450px;
+}
+
+.colorboxwrapper_small
+{
+	margin: 10px auto;
 	width: 450px;
 }
 
@@ -718,8 +724,13 @@ legend
 .contact_message{
 	padding: 10px;
 }
+
+.contact_message p{
+	text-align: left
+}
+
 .contact_message label{
-	width: 7em;
+	width: 8em;
     display: block;
     float: left;
 }
@@ -731,15 +742,18 @@ legend
 }
 .contact_message fieldset{
 	margin-top: 1em;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 .contact_message input[type="radio"]{
 	width: 5px;
 }
 .contact_message textarea{
-	width: 310px;
+	width: 325px;
 }
 .contact_message input[type="submit"]{
 	width: 100px;
+	float: left;
 }
 /*---------------- login form --------------------------------------*/
 
