--- a/css/style.css
+++ b/css/style.css
@@ -57,50 +57,23 @@ z
 
 .footer
 {
-	height: 60px;
 	width: 820px;
 	clear: both;
-	float:left;
 	position:relative;
 	top: 0px;
-	background-color:#131313;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	padding: 10px 40px;
 	text-align: center;
 	font-size: 0.8em;
 	color: white;
+	text-align:left;
+	clear:both;
 	
-	clear:both;
-}
-
-.footer_linkbox
-{
-	border-left: solid white 1px;
-	border-right: solid white 1px;
-	width: 193px;
-	text-align: center;
-	vertical-align: center;
-	font-size: 0.9em;
-	color: white;
-	float: left;
-	margin: 0 5px 20px 0px;
-}
-
-.footer_linkbox a:link { text-decoration:none; }
-.footer_linkbox	a:visited { text-decoration:line-through; }
-.footer_linkbox a:hover { text-width:bold; text-decoration:underline; }
-.footer_linkbox	a:active { text-decoration:underline; }
-.footer_linkbox	a:focus { text-decoration:blink; }
-
-.footer_copyright
-{
-	text-align: center;
-	position: absolute;
-	bottom:10px;
-	font-size: 0.9em;
-	color: white;
-	clear:both;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#131313', endColorstr='#7f7f7f'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#131313), to(#7f7f7f)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  #131313,  #7f7f7f); /* for firefox 3.6+ */ 
+	
 }
 
 
@@ -307,7 +280,7 @@ th
 
 .slidebox
 {
-	height: 150px;
+	height: auto;
 	display: none;
 }
 
@@ -351,10 +324,9 @@ legend
 
 #froxcloud_white
 {
-	height: 30px;
+	height: 20px;
 	float:right;
 	bottom:0px;
-	margin-right: 25px;
 }
 
 
@@ -441,15 +413,9 @@ legend
 	font-family:Arial, Helvetica, sans-serif;
 	border-bottom:1px solid #000000;
 	border-top:1px solid #000000;
-	background: rgb(127,127,127); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(127,127,127,1) 1%, rgba(56,56,56,1) 51%, rgba(19,19,19,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(127,127,127,1)), color-stop(51%,rgba(56,56,56,1)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* IE10+ */
-	background: linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7f7f7f', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
-	
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
 }
 
 .mainmenu li
