--- a/css/handheld.css
+++ b/css/handheld.css
@@ -1,28 +1,23 @@
-/* --------------- General ------------------------------ */
-/*sets body 100% in firefox*/
+@CHARSET "ISO-8859-1";
+/*
 html, body {
 	min-height: 100%;
 }
 
+*/
 body 
 {
 	color: #131313;
 	width: 100%;
-	margin: 0 auto;
-	font-family: Arial, Helvetica, sans-serif;
-
-	/*gradient color for all browser*/
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#F0F0F0'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#F0F0F0)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #F0F0F0); /* for firefox 3.6+ */ 
-	background-repeat:no-repeat;
-
+	margin:0px auto;
+	font-size: 1.8em;
 }
 
 .header {
 	background-color: #F0F0F0;
 	width: 100%;
-	height: 15%;
+	height: 160px;
+	margin: 0px;
 	
 	-moz-box-shadow: inset 0 0 10px 0 #000;
 	-webkit-box-shadow: inset 0 0 10px 0 #000;
@@ -31,12 +26,11 @@ body
 
 .header_right {
 	float: right;
-	width: 40%;
-	height: 15%;
+	width: 30%;
+	
 	position: relative;
 	text-align: right;
 }
-
 
 .content_container {
 	background-color: #F0F0F0;
@@ -56,10 +50,7 @@ body
 
 .footer
 {
-	height: 60px;
-	width: 100%;
-	clear: both;
-	float:left;
+	height: 80px;
 	position:relative;
 	top: 0px;
 	background-color:#131313;
@@ -68,29 +59,10 @@ body
 	text-align: center;
 	font-size: 0.8em;
 	color: white;
-	
 	clear:both;
+	padding: 20px;
+	margin:0px;
 }
-
-.footer_linkbox
-{
-	border-left: solid white 1px;
-	border-right: solid white 1px;
-	width: 193px;
-	text-align: center;
-	vertical-align: center;
-	font-size: 0.9em;
-	color: white;
-	float: left;
-	margin: 0 5px 20px 0px;
-	display:none;
-}
-
-.footer_linkbox a:link { text-decoration:none; }
-.footer_linkbox	a:visited { text-decoration:line-through; }
-.footer_linkbox a:hover { text-width:bold; text-decoration:underline; }
-.footer_linkbox	a:active { text-decoration:underline; }
-.footer_linkbox	a:focus { text-decoration:blink; }
 
 .footer_copyright
 {
@@ -99,11 +71,9 @@ body
 	bottom:10px;
 	font-size: 0.9em;
 	color: white;
-	clear:both;
 }
 
-
-/* --------------- Headers ------------------------------ */
+/*
 body h1{
 	 
 	 font-family: Arial, Helvetica, sans-serif;
@@ -131,12 +101,11 @@ h3
 
 hr
 {
- border: 0px; /* Für Firefox und Opera */
+ border: 0px; 
  border-top: solid 1px #FF0000;
- border-bottom: solid 1px #FFFFFF; /* Für I.Explorer (Seiten-Hintergrundfarbe!) */
+ border-bottom: solid 1px #FFFFFF; 
 }
 
-/* Hyperlinks */
 a:link {
 	 color:black; text-decoration:none;
 }
@@ -153,27 +122,25 @@ a:active {
 	color:black; text-decoration:underline; 
 }
 
-/*Message Area*/
+
 .messagearea{
 	margin: 10px;
 	font-weight: bold;
 }
 
-/*Error Message Area*/
 #error_msg_area{
 	color: red;
 }
-/* --------------- Header Area ------------------------------ */
 
 
-
+*/
 #shoppingcart {
 	float: right;
 	margin: 10px;
 	font-weight:bold;
-	font-size: 0.8em;
 	color:#A0A0A0;
 }
+/*
 
 #shoppingcart tr
 {
@@ -229,18 +196,17 @@ th
 	font-weight:bold; color:black; text-decoration:underline; 
 }
 
-
-/* --------------- wrapper ------------------------ */
+*/
 .boxwrapper 
 {
 	margin: 5%;
 	width: 100%;
 }
-
+/*
 .colorboxwrapper
 {
 	margin: 40px auto;
-	width: 100%;
+	width: 450px;
 }
 
 .internalwrapper
@@ -251,14 +217,11 @@ th
 
 .productwrapper
 {
-	width: 100%;
+	width: 780px;
 	clear:both;
 }
 
-
-/* --------------- Box Layouts ------------------------ */
-
-
+*/
 .whitebox 
 {
 	float: left;
@@ -312,17 +275,14 @@ fieldset
 
 legend
 {
-	font-weight:bold;
-	font-size: 1.2em;
 	text-align: left;
 }
 
 
 #littlelogo
 {
-	width: 0;
-	height:0;
-	position: none;
+	width: 120px;
+	margin: 5px;
 }
 
 #minilogo
@@ -334,67 +294,61 @@ legend
 }
 
 #logo {
-	height: 40%;
+	width: 60%;
 	margin: 10px;
 }
 
 #froxcloud_white
 {
-	height: 40%;
+	width:30%;
 	float:right;
+	bottom:0px;
+	margin-right: 50px;
 }
 
 
-
-/* --------------- Button Layouts ------------------------ */
-
 .buttonlayout_more
 {
-	height: 30px;
 	width: 100%;
+	height: 60px;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	color: white;
 
 	
-	/*Gradient color like logo color with "ultimate css gradient generator" */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313);
 
 }
 
 .buttonlayout_buy
 {
-	height: 30px;
 	width: 100%;
 	color: white;
+	height: 60px;
 	
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
-
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7');
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); 
+	background: -moz-linear-gradient(top,  #00abf4,  #02def7); 
 }
 
-/* -------------------Language Switch Buttons---------------*/
 
 .language_switch
 {
-	clear:both;
 	float:right;
-	margin-right: 2%;
-	margin-bottom: 2%;
-	
+	margin-right: 200px;
+	display: none;
 }
-
+/*
 .language_switch button
 {
 	float:right;
 	color: white;
 	font-size: 0.6em;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); 
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); 
 }
 
 #german
@@ -411,44 +365,39 @@ legend
 
 .language_switch button.active
 {
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); 
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); 
+	background: -moz-linear-gradient(top,  #00abf4,  #02def7); 
 }
 
-
-
-/* --------------- Main Menu ------------------------------ */
+*/
 .mainmenu ul
 {
-	margin:0;
+	margin:0px;
 	padding:0;
 	list-style-type:none;
 	width:auto;
 	position:relative;
 	display:block;
-	height:30px;
-	font-size:12px;
+	height:65px;
 	font-weight:bold;
-	background:transparent url(../images/nav_bg.png) repeat-x top left;
 	font-family:Arial, Helvetica, sans-serif;
 	border-bottom:1px solid #000000;
 	border-top:1px solid #000000;
-	background: rgb(127,127,127); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(127,127,127,1) 1%, rgba(56,56,56,1) 51%, rgba(19,19,19,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(127,127,127,1)), color-stop(51%,rgba(56,56,56,1)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* IE10+ */
-	background: linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7f7f7f', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
 	
 }
 
 .mainmenu li
 {
-	width:20%;
 	float:left;
+	margin: 0px;
+	height:100%;
+	width:auto;
+	padding: 0 5px 0 5px;
+	
 }
 	
 .mainmenu li a
@@ -459,14 +408,14 @@ legend
 	color:#999999;
 	font-weight:bold;
 	width: 100%;
-	padding: 8px 0 0 0;
+	padding: 0 5px 0 5px;
+	height: 100%;
+	
 }
 	
 .mainmenu li a:hover
 {	
-	color:#FFFFFF;
-	height:22px;
-	background:transparent url(../images/nav_bg.png) 0px -30px no-repeat;		
+	color:#FFFFFF; 
 }
 	
 .mainmenu li a.active 
@@ -474,20 +423,21 @@ legend
 	color: white;
 	display:inline;
 	height:22px;
-	background:transparent url(../images/nav_bg.png) 0px -30px no-repeat;	
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
+	
 	float:left;
 	margin:0;
+	height:100%;
 }
 
 #mainmenuelement{
 	float: right;
+	margin-right:10px;
 }
+/*
 
-
-
-
-
-/* --------------- Registration Formular ------------------------------ */
 .registrationform{
 	text-align: left;
 }
@@ -548,17 +498,12 @@ legend
 .registrationform fieldset{
 	margin-top: 1em;
 }
-/* --------------- Customer Center -------------------------------------- */
 
 .customer_content_container {
 	width: 100%;
-	height: auto;
-	text-align:center;
-	position:relative;
+	text-align: left;
 	float: left;
-	clear: both;
-	padding-bottom: 40px;
-	background-repeat:no-repeat;
+	margin: 5px;
 }
 
 
@@ -592,78 +537,50 @@ legend
 	text-align: left;
 }
 
-.customermenu ul
-{
-	margin-top:0;
-	padding:0;
+.customermenu {
+	border-radius: 10px;
+	background: #333;
+	list-style: none;
+	margin: 15px;
+	padding: 0;
+	float: left;
+	border:1px solid #000000;
+}
+.customermenu ul {
 	list-style-type:none;
-	width:auto;
-	position:relative;
-	display:block;
-	height:30px;
-	font-size:12px;
-	font-weight:bold;
-	background:transparent url(../images/nav_bg.png) repeat-x top left;
-	font-family:Arial, Helvetica, sans-serif;
-	border-bottom:1px solid #000000;
-	border-top:1px solid #000000;
-	background: rgb(127,127,127); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(127,127,127,1) 1%, rgba(56,56,56,1) 51%, rgba(19,19,19,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(127,127,127,1)), color-stop(51%,rgba(56,56,56,1)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* IE10+ */
-	background: linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7f7f7f', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
-	
+	padding: 0;
+	margin: 5px;
 }
-
-.customermenu li
-{
-	width:33.3%;
-	float:left;
-}
-	
-.customermenu li a
-{
-	text-align:center;
-	display:block;
-	float:left;
+.customermenu li {
+	font: 67.5% 'Lucida Sans Unicode', 'Bitstream Vera Sans', 'Trebuchet Unicode MS', 'Lucida Grande', Verdana, Helvetica, sans-serif;
 	color:#999999;
-	font-weight:bold;
-	width: 100%;
-	padding: 8px 0 0 0;
+	margin: 0;
+	padding: 0;
 }
-	
-.customermenu li a:hover
-{	
-	color:#FFFFFF;
-	height:22px;
-	background: rgb(127,127,127); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(127,127,127,1) 1%, rgba(56,56,56,1) 51%, rgba(19,19,19,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(127,127,127,1)), color-stop(51%,rgba(56,56,56,1)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* IE10+ */
-	background: linear-gradient(top,  rgba(127,127,127,1) 1%,rgba(56,56,56,1) 51%,rgba(19,19,19,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7f7f7f', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
-	
+.customermenu a {
+	background: #333;
+	border-bottom: 1px solid #393939;
+	color:#999999;
+	display: block;
+	margin: 0;
+	padding: 8px 12px;
+	text-decoration: none;
+	font-weight:normal;
+	text-align: left;
+    text-indent: 4px;
 }
-	
-.customermenu li a.active 
-{
-	color: white;
-	display:inline;
-	height:22px;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
-	
-	float:left;
-	margin:0;
+.customermenu a:hover {
+	background:  url('../images/cmenu_hover_blue.png') left center no-repeat;
+	color: #fff;
+	padding-bottom: 8px;
 }
 
-/* Customer Data Table */
+.customermenu a.active {
+	background:  url('../images/cmenu_hover_blue.png') left center no-repeat;
+	color: white;
+}
+
+
 .customer_data {
 	vertical-align: top;
 	margin: 15px;
@@ -728,7 +645,6 @@ legend
 }
 
 
-/*----------------------Backend--------------------------*/
 
 .admin_logout{
 	float: right;
@@ -746,7 +662,6 @@ legend
 }
 
 
-/*---------------- contact form --------------------------------------*/
 .contact_message{
 	padding: 10px;
 }
@@ -773,18 +688,18 @@ legend
 .contact_message input[type="submit"]{
 	width: 100px;
 }
-/*---------------- login form --------------------------------------*/
 
 .loginform label{
+	width: 7em;
     display: block;
+    float: left;
     margin-bottom: 5px;
 }
 .loginform input{
-	width: auto;
+	width: 200px;
 	margin-bottom: 5px;
 }
 .loginform input[type="submit"]{
-	float:left;
 	width: 100px;
 	margin-top: 5px;
 }
@@ -794,3 +709,6 @@ legend
 	text-decoration: underline;
 	margin-left: 20px;
 }
+
+*/
+
