--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 /*sets body 100% in firefox*/
 html, body {
 	min-height: 100%;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#F0F0F0'); /* for IE */
 }
 
 .hide_for_screen
@@ -16,7 +17,7 @@ body
 	width: 900px;
 	margin: 0 auto;
 	font-family: Arial, Helvetica, sans-serif;
-z
+
 	/*gradient color for all browser*/
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#F0F0F0'); /* for IE */
 	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#F0F0F0)); /* for webkit browsers */
@@ -345,7 +346,6 @@ legend
 	border-bottom-right-radius: 10px;
 	color: white;
 
-	
 	/*Gradient color like logo color with "ultimate css gradient generator" */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
 	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
