--- a/css/style.css
+++ b/css/style.css
@@ -706,17 +706,32 @@ legend
 
 .admin_logout{
 	float: right;
-	margin: 10px;
 	font-weight:bold;
 	font-size: 0.8em;
 	color:#A0A0A0;
 	clear:both;
+	right: 10px;
+	position: absolute;
+}
+.admin_logout img[id="logout"]{
+	position: absolute;
+    right: 0px;
+    top: 0px;
+}
+#logout_text{
+	position: absolute;
+    right: 24px;
+    top: 1px;
 }
 
 #admin_welcome
 {
-	margin-top: 80px;
-	margin-right:5px;
+	bottom: 0;
+    font-size: 0.8em;
+    font-weight: bold;
+    position: absolute;
+    right: 10px;
+    text-align: right;
 }
 
 #customizing_entries{
