message appears in customer center welcome screen if customer log in. Redirect to customer center is although working by now.
Some small enhancements in css file for customer overview in customer
center were done (float: left, clear: left) in class customer_data and
for id edit_customer.

--- a/css/style.css
+++ b/css/style.css
@@ -678,6 +678,7 @@ legend
 .customer_data {
 	vertical-align: top;
 	margin: 15px;
+	float: left;
 }
 
 .customer_data th{
@@ -697,6 +698,8 @@ legend
 
 #edit_customer{
 	margin: 15px;
+	clear: left;
+	float: left;
 }
 
 .edit_cust_data{
