icon fix im kundencenter

--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ td
 th
 {
 	border-bottom: 5px solid grey;
+	color: #1874CD;
 }
 .shoppingcart a:link[id="start_checkout"]{
 	text-align: right;
@@ -809,6 +810,10 @@ legend
 .content table{
 	margin-top: 20px;
 	margin-bottom: 15px;
+}
+
+.content th{
+	color: black;
 }
 
 .content input[id="edit_customer"]{
