edit serve css fix

--- a/css/style.css
+++ b/css/style.css
@@ -1013,3 +1013,9 @@ table td[id="small_font"]{
 .cust_address_information fieldset{
 	margin-top: 1em;
 }
+
+.space
+{
+	width:100px;
+	float:left;
+}
