buttons im warenkorb

--- a/css/style.css
+++ b/css/style.css
@@ -132,25 +132,36 @@ a:active {
 
 /* Button style for links */
 .button_style{
-	outline: thin outset;
+	outline: 1.5px outset;
     padding: 5px;
-    margin: 10px 0;
     font-weight: normal;
+    background: none repeat scroll 0 0 white;
+    clear: both;
+    float: left;
+    font-weight: normal;
+    margin: 5px 10px;
+    min-width: 100px;
+    text-decoration: none;
 }
 a.button_style:link{
 	font-weight: normal;
+	text-decoration: none
 }
 a.button_style:visited {
 	outline: thin outset;
+	font-weight: normal;
 }
 a.button_style:focus {
 	outline: thick outset;
+	font-weight: normal;
 }
 a.button_style:hover {
-	outline: thick outset;
+	outline: 2px outset;
+	font-weight: normal;
 }
 a.button_style:active {
 	outline: thin outset;
+	font-weight: normal;
 }
 
 
